common fixes -> text-wrap, polish char, fix chat display, ef core

--- a/src/Services/AstormClient/src/app/modules/chat/presenter/chat-card-presenter/chat-card-presenter.component.scss
+++ b/src/Services/AstormClient/src/app/modules/chat/presenter/chat-card-presenter/chat-card-presenter.component.scss
@@ -19,6 +19,8 @@
     height: 90%;
     display: flex;
     flex-direction: column;
+    text-overflow: ellipsis;
+    overflow-y: scroll;
 
     &__who-texted {
       width: 100%;
